CKS/netpol/allow-pod-a.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-metadata-pod-a
spec:
  podSelector:
    matchLabels:
      pod: a
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 169.254.169.254/32
