CKS/netpol/api-allow-81.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow-81
spec:
  podSelector:
    matchLabels:
      pod: a
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 81
