CKS/netpol/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: b-deny-egress
spec:
  podSelector:
    matchLabels:
      pod: b
  policyTypes:
  - Egress
  egress: []
