CKS/netpol/web-allow-ns.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: team-a
  name: web-allow-all-namespaces
spec:
  podSelector:
    matchLabels:
      pod: a
  ingress:
  - from:
    - namespaceSelector: {}
