CKS/netpol/web-allow-pod.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-prod
spec:
  podSelector:
    matchLabels:
      pod: a
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: production
